# whycon

./: CCircleDetect.cs  CHANGELOG.rst  CMakeLists.txt  CNecklace.cs  CTransformation.cs  ClassDiagram1.cd  ClassDiagram2.cd  ClassDiagram3.cd  CosPhi.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Form3.cs  Form4.Designer.cs  Form4.cs  Form5.Designer.cs  Form5.cs  LICENSE  OffCircleDetect.cs  Program.cs  README.md  WhyConID.csproj  package.xml
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cfg/: whycon.cfg
id/: Makefile  map_minimal.cpp  orig.whycode_unique_generator.cpp  whycode_unique_generator.cpp  whycode_unique_generator.cpp.edited  whycon_id_gen.cpp
launch/: jetson.launch  mav.tlog  mav.tlog.raw  sitl.launch  whycon.launch  whycon_snap_cart.launch  whycon_usb_cam.launch
msg/: Marker.msg  Tracker.msg  TrackerArray.msg
src/: CCircleDetect.h  CGui.cpp  CNecklace.cpp  CTransformation.cpp  CWhycon.cpp  CWhycon.h  sysmat.cpp  sysmat.h
src/lib/: circle_detector.cpp  localization_system.cpp
src/ros/: whycon_node.cpp  whycon_ros.cpp  whycon_ros.h
